kubernetes/apps/network/gateway/resources/middleware-forwardauth.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forward-auth
  namespace: network
spec:
  forwardAuth:
    address: https://auth.vaderrp.com/outpost.goauthentik.io/auth/nginx
    trustForwardHeader: true
    authResponseHeaders:
      - Set-Cookie
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
