kubernetes/apps/network/gateway/resources/referencegrant-forwardauth.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-forwardauth-cross-namespace
  namespace: network
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: media
  to:
    - group: traefik.io
      kind: Middleware
      name: forward-auth
