kubernetes/apps/network/gateway/resources/httproute-traefik-dashboard.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: network
spec:
  parentRefs:
    - name: gateway-public
  hostnames:
    - "traefik.vaderrp.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: traefik
          port: 9000
