kubernetes/apps/network/gateway/resources/redirect-http-to-https.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-http-to-https
  namespace: network
spec:
  parentRefs:
    - name: gateway-public
  hostnames:
    - "*.vaderrp.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
